remove temporary template things

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,58 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{https://doi.org/10.1002/dmrr.3833,
+  author = {Armenteros, Jose Juan Almagro and Brorsson, Caroline and Johansen,
+            Christian Holm and Banasik, Karina and Mazzoni, Gianluca and Moulder,
+            Robert and Hirvonen, Karoliina and Suomi, Tomi and Rasool, Omid and
+            Bruggraber, Sylvaine F. A. and Marcovecchio, M. Loredana and
+            Hendricks, Emile and Al-Sari, Naba and Mattila, Ismo and
+            Legido-Quigley, Cristina and Suvitaival, Tommi and Chmura, Piotr J.
+            and Knip, Mikael and Schulte, Anke M. and Lee, Jeong Heon and
+            Sebastiani, Guido and Grieco, Giuseppina Emanuela and Elo, Laura L.
+            and Kaur, Simranjeet and Pociot, Flemming and Dotta, Francesco and
+            Tree, Tim and Lahesmaa, Riitta and Overbergh, Lut and Mathieu,
+            Chantal and Peakman, Mark and Brunak, Søren and the INNODIA
+            investigators},
+  title = {Multi-omics analysis reveals drivers of loss of β-cell function after
+           newly diagnosed autoimmune type 1 diabetes: An INNODIA multicenter
+           study},
+  journal = {Diabetes/Metabolism Research and Reviews},
+  volume = {40},
+  number = {5},
+  pages = {e3833},
+  keywords = {disease progression, multi-omics, type 1 diabetes},
+  doi = {https://doi.org/10.1002/dmrr.3833},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/dmrr.3833},
+  eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/dmrr.3833},
+  abstract = {Abstract Aims Heterogeneity in the rate of β-cell loss in newly
+              diagnosed type 1 diabetes patients is poorly understood and creates
+              a barrier to designing and interpreting disease-modifying clinical
+              trials. Integrative analyses of baseline multi-omics data obtained
+              after the diagnosis of type 1 diabetes may provide mechanistic
+              insight into the diverse rates of disease progression after type 1
+              diabetes diagnosis. Methods We collected samples in a pan-European
+              consortium that enabled the concerted analysis of five different
+              omics modalities in data from 97 newly diagnosed patients. In this
+              study, we used Multi-Omics Factor Analysis to identify molecular
+              signatures correlating with post-diagnosis decline in β-cell mass
+              measured as fasting C-peptide. Results Two molecular signatures
+              were significantly correlated with fasting C-peptide levels. One
+              signature showed a correlation to neutrophil degranulation,
+              cytokine signalling, lymphoid and non-lymphoid cell interactions
+              and G-protein coupled receptor signalling events that were
+              inversely associated with a rapid decline in β-cell function. The
+              second signature was related to translation and viral infection was
+              inversely associated with change in β-cell function. In addition,
+              the immunomics data revealed a Natural Killer cell signature
+              associated with rapid β-cell decline. Conclusions Features that
+              differ between individuals with slow and rapid decline in β-cell
+              mass could be valuable in staging and prediction of the rate of
+              disease progression and thus enable smarter (shorter and smaller)
+              trial designs for disease modifying therapies as well as offering
+              biomarkers of therapeutic effect.},
+  year = {2024},
+  selected = {true},
+  preview = {dna_thumbnail.png},
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
-}
