fix loading of about page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,15 +5,7 @@
   author = {Armenteros, Jose Juan Almagro and Brorsson, Caroline and Johansen,
             Christian Holm and Banasik, Karina and Mazzoni, Gianluca and Moulder,
             Robert and Hirvonen, Karoliina and Suomi, Tomi and Rasool, Omid and
-            Bruggraber, Sylvaine F. A. and Marcovecchio, M. Loredana and
-            Hendricks, Emile and Al-Sari, Naba and Mattila, Ismo and
-            Legido-Quigley, Cristina and Suvitaival, Tommi and Chmura, Piotr J.
-            and Knip, Mikael and Schulte, Anke M. and Lee, Jeong Heon and
-            Sebastiani, Guido and Grieco, Giuseppina Emanuela and Elo, Laura L.
-            and Kaur, Simranjeet and Pociot, Flemming and Dotta, Francesco and
-            Tree, Tim and Lahesmaa, Riitta and Overbergh, Lut and Mathieu,
-            Chantal and Peakman, Mark and Brunak, Søren and the INNODIA
-            investigators},
+            Bruggraber, Sylvaine F. A. and others},
   title = {Multi-omics analysis reveals drivers of loss of β-cell function after
            newly diagnosed autoimmune type 1 diabetes: An INNODIA multicenter
            study},
@@ -53,6 +45,5 @@
               biomarkers of therapeutic effect.},
   year = {2024},
   selected = {true},
-  preview = {dna_thumbnail.png},
 }
 
