--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -46,4 +46,49 @@
   year = {2024},
   selected = {true},
 }
+@unpublished{http://dx.doi.org/10.2139/ssrn.5333600,
+  author = {Johansen, Christian Holm and Hjaltelin, Jessica Xin and Placido,
+            Davide and Cadell, Samuel Bremerskov and Mortensen, Laust H. and Haue
+            , Amalie Dahl and Brunak, Søren, },
+  title = {A Deep Learning Approach Across Primary and Secondary Care for Early
+           Detection of Young-Onset Type 2 Diabetes},
+  doi = {http://dx.doi.org/10.2139/ssrn.5333600},
+  note = {Preprint},
+  abstract = {Background: Once considered a disease observed in older adults,
+              type 2 diabetes is now increasingly seen in youth and adolescence.
+              Young-onset patients often experience diagnostic delays and have an
+              increased risk of complications compared to individuals with a
+              later onset. Timely intervention has already shown to lower the
+              risk of complications emphasising the need for new detection
+              methods in the young-onset type 2 diabetes domain. Methods: We
+              constructed a deep learning-based prediction algorithm of
+              young-onset type 2 driven by routine care data from both primary
+              and secondary healthcare sectors. We predicted future risk of
+              diabetes for multiple time horizons spanning 0-24 months using
+              prior hospital diagnoses, primary care prescriptions, and primary
+              care health service events from nation-wide Danish health
+              registries. The algorithm was trained on patient health
+              trajectories from 3,435,638 individuals of whom 16,828 individuals
+              experienced young-onset type 2 diabetes in the period 1995-2018.
+              Findings: Using both primary and secondary care registries showed
+              an increased performance over models trained on data from single
+              registries. Relative risks of the 0·1% highest-risk individuals
+              compared to the general population ranged from 118·1 when
+              predicting debut within 3-15 months from the date of assessment to
+              74·6 for 12-24 months in the integrated model and 97·2 to 51·9 for
+              the best single registry models. Cross-replication in each of the
+              five Danish regions showed comparable performances with relative
+              risks ranging from 130·3 to 104·8 when predicting debut within 3-15
+              months and 58·7 to 46·3 for 12-24 months. Model explainability
+              revealed emphasis on both well-established risk factors and on
+              other factors previously linked mainly to late-onset type 2
+              diabetes, with cardiovascular prescriptions increasing in
+              importance close to diabetes debut. Interpretation: This study
+              highlights the potential for using deep learning methods on
+              longitudinal health data from both primary and secondary care to
+              develop low-cost predictive tools, e.g. for screening for
+              young-onset type 2 diabetes. },
+  year = {2025},
+  selected = {true},
+}
 
